welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:25: error: not found: value c
	faireV(c:Color)
               ^MethodsPicture:29: error: not found: value c
faireV(c:Color)
       ^